backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livestreamrecorderbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livestreamrecorderbackend
  template:
    metadata:
      labels:
        app: livestreamrecorderbackend
    spec:
      containers:
        - name: livestreamrecorderbackend
          image: ghcr.io/recorder-moe/livestreamrecorderbackend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 300Mi
            requests:
              memory: 100Mi
