frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livestreamrecorderfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livestreamrecorderfrontend
  template:
    metadata:
      labels:
        app: livestreamrecorderfrontend
    spec:
      containers:
        - name: livestreamrecorderfrontend
          image: ghcr.io/recorder-moe/livestreamrecorderfrontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 300Mi
            requests:
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.jsonc
              subPath: config.jsonc
      volumes:
        - name: config-volume
          configMap:
            name: livestreamrecorder-config
