ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livestreamrecorder-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: livestreamrecorderbackend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livestreamrecorderfrontend-service
                port:
                  number: 80
